scenario/dday2022/network-policy-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    project: mesh-arena
  name: allow-namespace
spec:
  ingress:
  - from:
    - podSelector: {}
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-ingress
  podSelector: {}
  policyTypes:
  - Ingress
